# learning-qt6

./: .gitignore  CMakeLists.txt  mainwindow.cpp
forms/: CMakeLists.txt  mainwindow.ui  movingwindow.ui
include/: CMakeLists.txt  lesson_model.h  mainwindow.h  movingwindow.h
resources/: translations.qrc
src/: CMakeLists.txt  lesson_model.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingwindow.cpp
translations/: learningqt6_en.ts  learningqt6_ja.ts  learningqt6_zh.ts
